--- a/NHK2024_mbd_R2WallSensor.ioc
+++ b/NHK2024_mbd_R2WallSensor.ioc
@@ -57,8 +57,9 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=Sensor1
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPIO_Input
 PA11.Mode=FDCAN_Activate
@@ -85,8 +86,9 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=Sensor2
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
