confirm board func

--- a/NHK2024_mbd_R2WallSensor.ioc
+++ b/NHK2024_mbd_R2WallSensor.ioc
@@ -29,16 +29,22 @@ Mcu.IP4=USART2
 Mcu.IPNb=5
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin0=PA0
+Mcu.Pin1=PA1
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
@@ -46,6 +52,10 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -57,11 +67,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA10.GPIO_Label=Sensor1
-PA10.GPIO_PuPd=GPIO_PULLUP
-PA10.Locked=true
-PA10.Signal=GPIO_Input
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=SIG6
+PA0.Locked=true
+PA0.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=SIG1
+PA1.Locked=true
+PA1.Signal=GPXTI1
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -86,11 +99,30 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA9.GPIO_Label=Sensor2
-PA9.GPIO_PuPd=GPIO_PULLUP
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=SIG5
+PA4.Locked=true
+PA4.Signal=GPXTI4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=SIG4
+PA5.Locked=true
+PA5.Signal=GPXTI5
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=SIG3
+PA6.Locked=true
+PA6.Signal=GPXTI6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=SIG2
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SIG8
+PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=SIG7
 PA9.Locked=true
-PA9.Signal=GPIO_Input
+PA9.Signal=GPXTI9
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -166,6 +198,22 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=80000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
